[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/personagem1_teste.png" type="Texture" id=1]
[ext_resource path="res://Sprites/silhueta1-teste.png" type="Texture" id=2]
[ext_resource path="res://Cutscenes/Dialogo-root.gd" type="Script" id=3]
[ext_resource path="res://fontes/fonte_normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://Cutscenes/Menu_pular.gd" type="Script" id=5]

[node name="Dialogo-root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.36038
margin_bottom = 1.36035
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box-dialogo" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -200.0
margin_right = -150.0
margin_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Box-dialogo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.663452
margin_top = -0.630249
margin_right = -0.663452
margin_bottom = -0.630249
color = Color( 0, 0, 0, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lb_nome" type="Label" parent="Box-dialogo"]
margin_left = 500.0
margin_top = 11.328
margin_right = 579.0
margin_bottom = 25.328
rect_scale = Vector2( 1.5, 1.5 )
text = "Personagem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lb_dialogo" type="Label" parent="Box-dialogo"]
margin_left = 90.0
margin_top = 37.0
margin_right = 628.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 4 )
text = "dasdasdasdasdasdasdadsadasasddasdasdasdasdas"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lb_info" type="Label" parent="Box-dialogo"]
margin_left = 253.14
margin_top = 130.109
margin_right = 453.14
margin_bottom = 161.109
text = "Pressione ESC para pular
Pressione N para avançar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_prox" type="Button" parent="Box-dialogo"]
margin_left = 535.382
margin_top = 134.0
margin_right = 600.382
margin_bottom = 154.0
text = "Avançar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_ant" type="Button" parent="Box-dialogo"]
margin_left = 106.148
margin_top = 134.0
margin_right = 118.148
margin_bottom = 154.0
text = "Anterior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem" type="Sprite" parent="."]
position = Vector2( 0, 608 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -200 )

[node name="Silhueta" type="Sprite" parent="."]
position = Vector2( 1024, 608 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -300, -200 )

[node name="Timer_letras" type="Timer" parent="."]
wait_time = 0.1

[node name="Menu_pular" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="Menu_pular"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.815686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu_pular"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -105.0
margin_right = 265.0
margin_bottom = 105.0
color = Color( 0.431373, 0.290196, 0.290196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu_pular"]
margin_left = 252.497
margin_top = 250.054
margin_right = 512.497
margin_bottom = 264.054
rect_scale = Vector2( 2, 2 )
text = "Você deseja mesmo pular esse dialogo ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_sim" type="Button" parent="Menu_pular"]
margin_left = 350.0
margin_top = 340.0
margin_right = 386.0
margin_bottom = 360.0
rect_scale = Vector2( 2, 2 )
text = "Sim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_nao" type="Button" parent="Menu_pular"]
margin_left = 600.0
margin_top = 340.0
margin_right = 637.0
margin_bottom = 360.0
rect_scale = Vector2( 2, 2 )
text = "Não"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Box-dialogo/Btn_prox" to="." method="_on_Btn_prox_pressed"]
[connection signal="pressed" from="Box-dialogo/Btn_ant" to="." method="_on_Btn_ant_pressed"]
[connection signal="timeout" from="Timer_letras" to="." method="_on_Timer_letras_timeout"]
[connection signal="pressed" from="Menu_pular/Btn_sim" to="Menu_pular" method="_on_Btn_sim_pressed"]
[connection signal="pressed" from="Menu_pular/Btn_nao" to="Menu_pular" method="_on_Btn_nao_pressed"]
